--- a/index.html
+++ b/index.html
@@ -10,69 +10,18 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
-
+  <!-- Fonts -->
+  <link rel="stylesheet" href="css/fonts/Bebas/stylesheet.css">
+  <!--  -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-  <!-- Scroll -->
-  <script src="js/vendor/smooth-scroll.min.js"></script>
-  <script src="js/vendor/smooth-scroll.polyfills.min.js"></script>
-  <script>
-    var scroll = new SmoothScroll('a[href*="#"]', {
-
-      // Selectors
-      ignore: '[data-scroll-ignore]', // Selector for links to ignore (must be a valid CSS selector)
-      header: null, // Selector for fixed headers (must be a valid CSS selector)
-      topOnEmptyHash: true, // Scroll to the top of the page for links with href="#"
-
-      // Speed & Duration
-      speed: 500, // Integer. Amount of time in milliseconds it should take to scroll 1000px
-      speedAsDuration: false, // If true, use speed as the total duration of the scroll animation
-      durationMax: null, // Integer. The maximum amount of time the scroll animation should take
-      durationMin: null, // Integer. The minimum amount of time the scroll animation should take
-      clip: true, // If true, adjust scroll distance to prevent abrupt stops near the bottom of the page
-      offset: function (anchor, toggle) {
-
-        // Integer or Function returning an integer. How far to offset the scrolling anchor location in pixels
-        // This example is a function, but you could do something as simple as `offset: 25`
-
-        // An example returning different values based on whether the clicked link was in the header nav or not
-        if (toggle.classList.closest('.my-header-nav')) {
-          return 25;
-        } else {
-          return 50;
-        }
-
-      },
-
-      // Easing
-      easing: 'easeInOutCubic', // Easing pattern to use
-      customEasing: function (time) {
-
-        // Function. Custom easing pattern
-        // If this is set to anything other than null, will override the easing option above
-
-        // return <your formulate with time as a multiplier>
-
-        // Example: easeInOut Quad
-        return time < 0.5 ? 2 * time * time : -1 + (4 - 2 * time) * time;
-
-      },
-
-      // History
-      updateURL: true, // Update the URL on scroll
-      popstate: true, // Animate scrolling with the forward/backward browser buttons (requires updateURL to be true)
-
-      // Custom Events
-      emitEvents: true // Emit custom events
-
-      });
-  </script>
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
+  <div class="contenedor">
   <!-- Nav-tabs -->
   <div class="container-fluid navegation-tabs">
     <div class="row">
@@ -83,28 +32,28 @@
               <div class="circle mr-1"></div>
               <div class="line"></div>
             </div>
-            <a data-scroll href="#home">HOME</a>
+            <a href="#home">HOME</a>
           </li>
           <li class="d-flex ">
               <div class="d-flex align-items-center mr-2">
                 <div class="circle mr-1"></div>
                 <div class="line"></div>
               </div>
-              <a data-scroll href="#works">WORKS</a>
+              <a href="#works">WORKS</a>
           </li>
           <li class="d-flex ">
               <div class="d-flex align-items-center mr-2">
                 <div class="circle mr-1"></div>
                 <div class="line"></div>
               </div>
-              <a href="">TEAM</a>
+              <a href="#team">TEAM</a>
           </li>
           <li class="d-flex ">
               <div class="d-flex align-items-center mr-2">
                 <div class="circle mr-1"></div>
                 <div class="line"></div>
               </div>
-              <a href="">CONTACT</a>
+              <a href="#quote">QUOTE</a>
           </li>
         </ul>
       </nav>
@@ -139,8 +88,8 @@
   <!-- Home -->
   <div id="home" class="content-fluid px-5 section section-tab home d-flex ">
     <div class="row d-flex align-items-center">
-      <div class="contenido col-7">
-        <h2 class="display-3">Lorem ipsum dolor sit amet.</h2>
+      <div class="contenido col-10">
+        <h2 class="display-3">Home</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus, libero!</p>
         <button class="btn  bg-white">Loream more</button>
       </div>
@@ -149,13 +98,38 @@
   <!--  -->
   <div id="works" class="content-fluid px-5 section section-tab works d-flex ">
       <div class="row d-flex align-items-center">
-        <div class="contenido col-7">
-          <h2 class="display-3">Lorem ipsum dolor sit amet.</h2>
+        <div class="contenido col-10">
+          <h2 class="display-3">Works</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus, libero!</p>
-          <button class="btn bg-dark">Loream more</button>
+          <button class="btn bg-white">Loream more</button>
         </div>
       </div>
     </div>
+    <script>
+      var scroll = new SmoothScroll('a[href*="#"]');
+    </script>
+    <div id="team" class="content-fluid px-5 section section-tab works d-flex ">
+      <div class="row d-flex align-items-center">
+        <div class="contenido col-10 ">
+          <h2 class="display-3">Team</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus, libero!</p>
+          <button class="btn bg-white">Loream more</button>
+        </div>
+      </div>
+    </div>
+    <div id="quote" class="content-fluid px-5 section section-tab works d-flex ">
+      <div class="row d-flex align-items-center">
+        <div class="contenido col-10">
+          <h2 class="display-3">Quote</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus, libero!</p>
+          <button class="btn bg-white">Loream more</button>
+        </div>
+      </div>
+    </div>
+    </div>
+    <script>
+      var scroll = new SmoothScroll('a[href*="#"]');
+    </script>
     <script>
       var scroll = new SmoothScroll('a[href*="#"]');
     </script>
