--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
 <!doctype html>
 <html class="no-js" lang="">
-
 <head>
   <meta charset="utf-8">
   <title></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
-  <!-- Fonts -->
   <link rel="stylesheet" href="css/fonts/Bebas/stylesheet.css">
-  <!--  -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <meta name="theme-color" content="#fafafa">
 </head>
-
 <body>
   <div class="contenedor">
+
   <!-- Nav-tabs -->
   <div class="container-fluid navegation-tabs">
     <div class="row">
@@ -59,6 +54,7 @@
       </nav>
     </div>
   </div>
+
   <!-- Menú fíjo -->
   <div class="container-fluid menu-fixed navbar-fixed-top py-3 px-5 ">
     <div class="row flex-items-xs-between menu-1 d-flex justify-content-between align-items-center ">
@@ -85,6 +81,7 @@
       </div> 
     </div>
   </div>
+
   <!-- Home -->
   <div id="home" class="content-fluid px-5 section section-tab home d-flex ">
     <div class="row d-flex align-items-center">
@@ -95,7 +92,8 @@
       </div>
     </div>
   </div>
-  <!--  -->
+
+  <!-- Works -->
   <div id="works" class="content-fluid px-5 section section-tab works d-flex ">
       <div class="row d-flex align-items-center">
         <div class="contenido col-10">
@@ -105,9 +103,6 @@
         </div>
       </div>
     </div>
-    <script>
-      var scroll = new SmoothScroll('a[href*="#"]');
-    </script>
     <div id="team" class="content-fluid px-5 section section-tab works d-flex ">
       <div class="row d-flex align-items-center">
         <div class="contenido col-10 ">
@@ -126,17 +121,13 @@
         </div>
       </div>
     </div>
-    </div>
-    <script>
-      var scroll = new SmoothScroll('a[href*="#"]');
-    </script>
-    <script>
-      var scroll = new SmoothScroll('a[href*="#"]');
-    </script>
+  </div>
+
   <!-- Bootstrap -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  
   <!-- Boilerplate -->
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
