favicon removed, logo src udpated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
   <link rel="stylesheet" href="css/fonts/Bebas/stylesheet.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
@@ -60,7 +59,7 @@
     <div class="row flex-items-xs-between menu-1 d-flex justify-content-between align-items-center ">
       <div class="left">
         <div class="logo">
-            <img src="img/Logo-white.png" alt="">
+            <img src="img/logo-white.png" alt="">
         </div>
       </div>
       <div class="right d-flex justify-content-between align-items-center">
