--- a/index.html
+++ b/index.html
@@ -16,84 +16,84 @@
 <body>
   <div class="contenedor">
 
-  <!-- Nav-tabs -->
-  <div class="container-fluid navegation-tabs">
-    <div class="row">
-      <nav>
-        <ul>
-          <li class="d-flex ">
-            <div class="d-flex align-items-center mr-2">
-              <div class="circle mr-1"></div>
-              <div class="line"></div>
-            </div>
-            <a href="#home">HOME</a>
-          </li>
-          <li class="d-flex ">
+    <!-- Nav-tabs -->
+    <div class="container-fluid navegation-tabs">
+      <div class="row">
+        <nav>
+          <ul>
+            <li class="d-flex ">
               <div class="d-flex align-items-center mr-2">
                 <div class="circle mr-1"></div>
                 <div class="line"></div>
               </div>
-              <a href="#works">WORKS</a>
-          </li>
-          <li class="d-flex ">
-              <div class="d-flex align-items-center mr-2">
-                <div class="circle mr-1"></div>
-                <div class="line"></div>
-              </div>
-              <a href="#team">TEAM</a>
-          </li>
-          <li class="d-flex ">
-              <div class="d-flex align-items-center mr-2">
-                <div class="circle mr-1"></div>
-                <div class="line"></div>
-              </div>
-              <a href="#quote">QUOTE</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </div>
-
-  <!-- Menú fíjo -->
-  <div class="container-fluid menu-fixed navbar-fixed-top py-3 px-5 ">
-    <div class="row flex-items-xs-between menu-1 d-flex justify-content-between align-items-center ">
-      <div class="left">
-        <div class="logo">
-            <img src="img/logo-white.png" alt="">
-        </div>
+              <a href="#home">HOME</a>
+            </li>
+            <li class="d-flex ">
+                <div class="d-flex align-items-center mr-2">
+                  <div class="circle mr-1"></div>
+                  <div class="line"></div>
+                </div>
+                <a href="#works">WORKS</a>
+            </li>
+            <li class="d-flex ">
+                <div class="d-flex align-items-center mr-2">
+                  <div class="circle mr-1"></div>
+                  <div class="line"></div>
+                </div>
+                <a href="#team">TEAM</a>
+            </li>
+            <li class="d-flex ">
+                <div class="d-flex align-items-center mr-2">
+                  <div class="circle mr-1"></div>
+                  <div class="line"></div>
+                </div>
+                <a href="#quote">QUOTE</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-      <div class="right d-flex justify-content-between align-items-center">
-        <!-- <div class="telphone px-2 d-flex align-items-center">
-          <i class="fas fa-phone mr-2"></i>
-          <span>+57 3524152658</span>
-        </div> -->
-        <div class="redes-sociales px-4 d-flex align-items-center">
-          <i class="fab fa-facebook-f  h5 mb-0 mx-2"></i>
-          <i class="fab fa-youtube  h5 mb-0 mx-2"></i>
-          <i class="fab fa-instagram h5 mb-0 mx-2"></i>
-        </div>
-        <div class="menu">
-          <div class="button-menu">
-            <i class="fas fa-bars "></i>
+    </div>
+
+    <!-- Menú fíjo -->
+    <div class="container-fluid menu-fixed navbar-fixed-top py-3 px-5 ">
+      <div class="row flex-items-xs-between menu-1 d-flex justify-content-between align-items-center ">
+        <div class="left">
+          <div class="logo">
+              <img src="img/logo-white.png" alt="">
           </div>
         </div>
-      </div> 
-    </div>
-  </div>
-
-  <!-- Home -->
-  <div id="home" class="content-fluid px-5 section section-tab home d-flex ">
-    <div class="row d-flex align-items-center">
-      <div class="contenido col-10">
-        <h2 class="display-3">Home</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus, libero!</p>
-        <button class="btn  bg-white">Loream more</button>
+        <div class="right d-flex justify-content-between align-items-center">
+          <!-- <div class="telphone px-2 d-flex align-items-center">
+            <i class="fas fa-phone mr-2"></i>
+            <span>+57 3524152658</span>
+          </div> -->
+          <div class="redes-sociales px-4 d-flex align-items-center">
+            <i class="fab fa-facebook-f  h5 mb-0 mx-2"></i>
+            <i class="fab fa-youtube  h5 mb-0 mx-2"></i>
+            <i class="fab fa-instagram h5 mb-0 mx-2"></i>
+          </div>
+          <div class="menu">
+            <div class="button-menu">
+              <i class="fas fa-bars "></i>
+            </div>
+          </div>
+        </div> 
       </div>
     </div>
-  </div>
 
-  <!-- Works -->
-  <div id="works" class="content-fluid px-5 section section-tab works d-flex ">
+    <!-- Home -->
+    <div id="home" class="content-fluid px-5 section section-tab home d-flex ">
+      <div class="row d-flex align-items-center">
+        <div class="contenido col-10">
+          <h2 class="display-3">Home</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus, libero!</p>
+          <button class="btn  bg-white">Loream more</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Works -->
+    <div id="works" class="content-fluid px-5 section section-tab works d-flex ">
       <div class="row d-flex align-items-center">
         <div class="contenido col-10">
           <h2 class="display-3">Works</h2>
@@ -102,6 +102,8 @@
         </div>
       </div>
     </div>
+
+    <!-- Team -->
     <div id="team" class="content-fluid px-5 section section-tab works d-flex ">
       <div class="row d-flex align-items-center">
         <div class="contenido col-10 ">
@@ -111,6 +113,8 @@
         </div>
       </div>
     </div>
+
+    <!-- Quote -->
     <div id="quote" class="content-fluid px-5 section section-tab works d-flex ">
       <div class="row d-flex align-items-center">
         <div class="contenido col-10">
@@ -120,7 +124,8 @@
         </div>
       </div>
     </div>
-  </div>
+
+  </div><!-- /.contenedor -->
 
   <!-- Bootstrap -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
