js code improvement

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="contenedor">
 
     <!-- Nav-tabs -->
-    <div class="container-fluid navegation-tabs">
+    <div class="container-fluid navigation-tabs">
       <div class="row">
         <nav>
           <ul>
