--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 
     <!-- Home -->
     <div id="home" class="content-fluid px-5 section section-tab home d-flex ">
-      <div class="row d-flex align-items-center">
-        <div class="contenido col-10">
+      <div class="row d-flex align-items-center pl-md-5">
+        <div class="p-0 pl-md-5 col-10">
           <h2 class="display-3">Home</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus, libero!</p>
           <button class="btn  bg-white">Loream more</button>
@@ -94,8 +94,8 @@
 
     <!-- Works -->
     <div id="works" class="content-fluid px-5 section section-tab works d-flex ">
-      <div class="row d-flex align-items-center">
-        <div class="contenido col-10">
+      <div class="row d-flex align-items-center pl-md-5">
+        <div class="p-0 pl-md-5 col-10">
           <h2 class="display-3">Works</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus, libero!</p>
           <button class="btn bg-white">Loream more</button>
@@ -105,8 +105,8 @@
 
     <!-- Team -->
     <div id="team" class="content-fluid px-5 section section-tab works d-flex ">
-      <div class="row d-flex align-items-center">
-        <div class="contenido col-10 ">
+      <div class="row d-flex align-items-center pl-md-5">
+        <div class="p-0 pl-md-5 col-10 ">
           <h2 class="display-3">Team</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus, libero!</p>
           <button class="btn bg-white">Loream more</button>
@@ -116,8 +116,8 @@
 
     <!-- Quote -->
     <div id="quote" class="content-fluid px-5 section section-tab works d-flex ">
-      <div class="row d-flex align-items-center">
-        <div class="contenido col-10">
+      <div class="row d-flex align-items-center pl-md-5">
+        <div class="p-0 pl-md-5 col-10">
           <h2 class="display-3">Quote</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus, libero!</p>
           <button class="btn bg-white">Loream more</button>
