--- a/index.html
+++ b/index.html
@@ -71,58 +71,55 @@
         <section class="section works"> 
           <div class="content-fluid px-5 section-tab d-flex ">
             <div class="row d-flex align-items-center pl-md-5 w-100">
-              <div class="p-0 pl-md-5 col-10">
-                <h2 class="display-3">Works</h2>
+              <div class="p-0 pl-md-5 col-11">
+                <h2 class="display-3 text-center">Works</h2>
                 <div class="posts">
                   <div class="posts__inner row">
-                    <div class="posts__menu col-md-4">
+                    <div class="posts__menu col-md-2">
                       <ul class="nav flex-column">
                           <li class="nav-item posts__menu__item mt-1 mb-1">
                             <a href="#collapseExample" data-toggle="collapse" 
                             role="button" aria-expanded="false" aria-controls="collapseExample">
                               <div class="row">
-                                <div class="col-4">
+                                <div class="col-12">
                                   <img src="https://via.placeholder.com/100" alt="">
-                                </div>
-                                <div class="col-8">
-                                  <span >Test 1</span>
                                 </div>
                               </div>
                             </a>
                           </li>
-                          <li class="nav-item posts__menu__item mt-1 mb-1"><a href="#">
+                          <li class="nav-item posts__menu__item mt-1 mb-1">
+                            <a href="#collapseExample" data-toggle="collapse" 
+                            role="button" aria-expanded="false" aria-controls="collapseExample">
                               <div class="row">
-                                <div class="col-4">
+                                <div class="col-12">
                                   <img src="https://via.placeholder.com/100" alt="">
                                 </div>
-                                <div class="col-8">
-                                  <span >Test 2</span>
-                                </div>
                               </div>
-                          </a></li>
-                          <li class="nav-item posts__menu__item mt-1 mb-1"><a href="#">
+                            </a>
+                          </li>
+                          <li class="nav-item posts__menu__item mt-1 mb-1">
+                            <a href="#collapseExample" data-toggle="collapse" 
+                            role="button" aria-expanded="false" aria-controls="collapseExample">
                               <div class="row">
-                                <div class="col-4">
+                                <div class="col-12">
                                   <img src="https://via.placeholder.com/100" alt="">
                                 </div>
-                                <div class="col-8">
-                                  <span >Test 3</span>
-                                </div>
                               </div>
-                          </a></li>
-                          <li class="nav-item posts__menu__item mt-1 mb-1"><a href="#">
+                            </a>
+                          </li>
+                          <li class="nav-item posts__menu__item mt-1 mb-1">
+                            <a href="#collapseExample" data-toggle="collapse" 
+                            role="button" aria-expanded="false" aria-controls="collapseExample">
                               <div class="row">
-                                <div class="col-4">
+                                <div class="col-12">
                                   <img src="https://via.placeholder.com/100" alt="">
                                 </div>
-                                <div class="col-8">
-                                  <span >Test 4</span>
-                                </div>
                               </div>
-                          </a></li>
+                            </a>
+                          </li>
                       </ul>
                     </div>
-                    <div class="posts__content col-md-8">
+                    <div class="posts__content col-md-10">
                       <div class="collapse" id="collapseExample">
                         <div class="card card-body text-dark">
                           <a 
@@ -147,11 +144,56 @@
         <!-- Team -->
         <section class="section team">
           <div class="content-fluid px-5 section-tab d-flex ">
-            <div class="row d-flex align-items-center pl-md-5">
-              <div class="p-0 pl-md-5 col-10 ">
-                <h2 class="display-3">Team</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus, libero!</p>
-                <button class="btn bg-white">Learn more</button>
+            <div class="row d-flex align-items-center pl-md-5 w-100">
+              <div class="p-0 pl-md-5 col-11">
+                <h2 class="display-3 text-center">Team</h2>
+                <div class="row text-center posts__menu">
+                  <div class="posts__menu__item col-md-4 mt-1 mb-1">
+                    <a href="#collapseExample2" data-toggle="collapse" 
+                    role="button" aria-expanded="false" aria-controls="collapseExample2">
+                    <img src="https://via.placeholder.com/150" alt=""></a>
+                  </div>
+                  <div class="posts__menu__item col-md-4 mt-1 mb-1">
+                    <a href="#collapseExample2" data-toggle="collapse" 
+                    role="button" aria-expanded="false" aria-controls="collapseExample2">
+                    <img src="https://via.placeholder.com/150" alt=""></a>
+                  </div>
+                  <div class="posts__menu__item col-md-4 mt-1 mb-1">
+                    <a href="#collapseExample2" data-toggle="collapse" 
+                    role="button" aria-expanded="false" aria-controls="collapseExample2">
+                    <img src="https://via.placeholder.com/150" alt=""></a>
+                  </div>
+                  <div class="posts__menu__item col-md-4 mt-1 mb-1">
+                    <a href="#collapseExample2" data-toggle="collapse" 
+                    role="button" aria-expanded="false" aria-controls="collapseExample2">
+                    <img src="https://via.placeholder.com/150" alt=""></a>
+                  </div>
+                  <div class="posts__menu__item col-md-4 mt-1 mb-1">
+                    <a href="#collapseExample2" data-toggle="collapse" 
+                    role="button" aria-expanded="false" aria-controls="collapseExample2">
+                    <img src="https://via.placeholder.com/150" alt=""></a>
+                  </div>
+                  <div class="posts__menu__item col-md-4 mt-1 mb-1">
+                    <a href="#collapseExample2" data-toggle="collapse" 
+                    role="button" aria-expanded="false" aria-controls="collapseExample2">
+                    <img src="https://via.placeholder.com/150" alt=""></a>
+                  </div>
+                </div>
+                <div class="posts__content">
+                  <div class="collapse" id="collapseExample2">
+                    <div class="card card-body text-dark">
+                      <a 
+                      href="#collapseExample2" 
+                      data-toggle="collapse" 
+                      role="button" 
+                      aria-expanded="false" 
+                      aria-controls="collapseExample2"
+                      class="text-right" ><i class="fas fa-times"></i></a>
+                      <h3>Test 1</h3>
+                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -191,6 +233,7 @@
   <script type="text/javascript" src="node_modules/fullpage.js/dist/fullpage.min.js"></script>
   <script type="text/javascript" src="node_modules/fullpage.js/vendors/scrolloverflow.min.js"></script>
   <script>
+    // Fullpage.js init
     new fullpage('#fullpage', {
         anchors: ['home', 'works', 'team', 'quote'],
         navigation: true,
@@ -198,6 +241,30 @@
         navigationTooltips: ['Home', 'Works', 'Team', 'Quote'],
 	      showActiveTooltip: true,
     });
+    // Works
+    $('#collapseExample').on('show.bs.collapse', function (e) {
+      console.log('#collapseExample collapse shown');
+    })
+    $('#collapseExample').on('hidden.bs.collapse', function (e) {
+      console.log('#collapseExample collapse hidden');
+    })
+    // Team
+    $('#collapseExample2').on('show.bs.collapse', function (e) {
+      $('.team .posts__content > div').css('transition-delay', '0.5s');
+      $('.team .posts__menu').addClass('posts__menu--small').removeClass('posts__menu--large');
+      $('.team .posts__menu__item').addClass('col-md-2').removeClass('col-md-4');
+    })
+      .on('shown.bs.collapse', function (e) {
+
+      })
+      .on('hide.bs.collapse', function (e) {
+        $('.team .posts__content > div').css('transition-delay', '0s');
+      })
+      .on('hidden.bs.collapse', function (e) {
+        $('.team .posts__menu').addClass('posts__menu--large').removeClass('posts__menu--small');
+        $('.team .posts__menu').addClass('').removeClass('');
+        $('.team .posts__menu__item').addClass('col-md-4').removeClass('col-md-2');
+      })
   </script>
 
 </body>
