--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
     crossorigin="anonymous"></script>
   <!-- <script src="js/plugins.js"></script>
   <script src="js/main.js"></script> -->
-  <script type="text/javascript" src="node_modules/fullpage.js/dist/fullpage.min.js"></script>
-  <script type="text/javascript" src="node_modules/fullpage.js/vendors/scrolloverflow.min.js"></script>
+  <script type="text/javascript" src="/dist/fullpage.min.js"></script>
+  <script type="text/javascript" src="/dist/scrolloverflow.min.js"></script>
   <script>
     // Fullpage.js init
     new fullpage('#fullpage', {
